# CMakeList.txt: The top-level CMake project file, 
# where global configuration is performed
# and contains subprojects.
#
CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

PROJECT ("LLog" VERSION 0.1 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 11)
# SET(CMAKE_BUILD_TYPE RelWithDebInfo)
IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -pthread")
ELSE()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Od")
ENDIF()
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(EXECUTABLE_OUTPUT_PATH          ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY 	${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY 	${PROJECT_SOURCE_DIR}/bin)

# add 3rd lib
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

# Include subitems
ADD_SUBDIRECTORY ("LLog")
ADD_SUBDIRECTORY ("LLog_test")